--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>Aman Kumar</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">Menu</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -74,11 +74,10 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
+	   			<h1>I'm Aman Kumar</h1>
 
 	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>UI/UX Designer</span> 
+	   				<span>Cyber Security Professional</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
@@ -89,11 +88,9 @@
    	</div> <!-- /intro-content --> 
 
    	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/aman-kumar777/"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://x.com/amykr777"><i class="fa fa-twitter"></i></a></li>
+         <li><a href="https://www.instagram.com/i_m_amankumar07/"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -113,7 +110,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">Experienced cybersecurity professional skilled in penetration testing, WAF Management, SOC alert triage, SAST/DAST and SCA. Proficient in deep and dark web monitoring, vulnerability management. Secure Code Review, and automation. Expertise in analyzing WAF traffic trends and managing WAF policies. Committed to enhancing security operations and mitigating risks proactively.</p>
    			</div>   			
 
    		</div>   		
@@ -124,28 +121,28 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>Currently working as an Incident Response Analyst at ReliaQuest, with over two years of experience as a Security Analyst at Fareportal India Pvt. Ltd.</p>
 
    			<ul class="info-list">
    				<li>
-   					<strong>Fullname:</strong>
-   					<span>Juan Dela Cruz</span>
+   					<strong>Full name:</strong>
+   					<span>Aman Kumar</span>
    				</li>
    				<li>
    					<strong>Birth Date:</strong>
-   					<span>September 28, 1987</span>
+   					<span>August 07, 2001</span>
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Freelancer, Frontend Developer</span>
-   				</li>
-   				<li>
-   					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>Security Analyst</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
-   					<span>me@kardswebsite.com</span>
+   					<span>amykr930@gmail.com</span>
+   				</li>
+    				<li>
+   					<strong>Address:</strong>
+   					<span>New Delhi, India</span>
    				</li>
 
    			</ul> <!-- /info-list -->
@@ -155,7 +152,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>Skilled in VAPT, Incident Response, WAF tuning, dark web monitoring, and integrating security into CI/CD pipelines to drive proactive risk mitigation.</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -992,22 +989,13 @@
      		<div class="col-six tab-full pull-right social">
 
      			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.linkedin.com/in/aman-kumar777/"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://x.com/amykr777"><i class="fa fa-twitter"></i></a></li>
+         <li><a href="https://www.instagram.com/i_m_amankumar07/"><i class="fa fa-instagram"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
 
-      	<div class="col-eight tab-full">
-	      	<div class="copyright">
-		        	<span>© Copyright 2018 </span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span> 
-		        	<span>Distributed by <a href="https://themewagon.com/">themewagon</a></span>	         	
-		         </div>		                  
-	      	</div>
 
 	      	<div id="go-top">
 		         <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
