--- a/index.html
+++ b/index.html
@@ -157,26 +157,28 @@
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
+				   	<strong>VAPT: Acunetix, Netsparker, Rapid7, Nessus, Burp Suite, OpenVAS</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>WAF: Akamai, Cloudflare, Fastly</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<div class="progress percent80"><span>80%</span></div>
+				   	<strong>Application Security: SAST/DAST, SCA, WebInspect, MobSF</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
+				   	<div class="progress percent95"><span>90%</span></div>
+				   	<strong>Tools: Semgrep, SonarQube, Tenable</strong>
 				   </li>
 				   <li>
-
+				   	<div class="progress percent90"><span>90%</span></div>
+				   	<strong>DevSecOps: Security Integration in CI/CD Pipeline and Secure Coding</strong>
+				   </li>
+				   <li>
 				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
-				   </li>
-      
+				   	<strong>Data Visualization: PowerBI, Kibana, Excel</strong>
+				   </li>      
 				</ul> <!-- /skill-bars -->		
 
    		</div>
@@ -203,7 +205,7 @@
    			<h5>Resume</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Cybersecurity professional specializing in incident response, threat detection, and proactive risk management to secure critical systems and data.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -227,12 +229,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Security Analyst (Incident Response)</h3>
+	   					<p>October 2024 - Present</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
+	   					<h4>ReliaQuest</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
 	   				</div>
 
@@ -245,13 +247,22 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Security Analyst (VAPT)</h3>
+	   					<p>July 2023 - October 2024</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Fareportal India Pvt. Ltd.</h4>
+	   					<li>Spearheaded the implementation of DevSecOps practices, overseeing application security measures such as Static Application Security Testing (SAST), Dynamic Application Security Testing (DAST), and Software Composition Analysis (SCA).</li>
+	   					<li>Led the implementation of GoPhish, integrating it with MySQL, designed and conducted multiple phishing campaigns to enhance employee awareness and training against phishing attacks.</li>
+	   					<li>Oversaw the actions on Akamai alerts and managed WAF policies to mitigate threats, reduce false positives, and enhance detection accuracy.</li>
+	   					<li>Actively reviewed and triaged SOC alerts from systems like Akamai WAF and Amazon GuardDuty.</li>
+	   					<li>Evaluated third-party vendors for Web Application Firewall (WAF) solutions, tracking competitive vendors and analyzing market trends to ensure optimal security, performance and inform strategic decisions.</li>
+	   					<li>Managed vulnerability assessments, automated scanning, and patching with Nessus to ensure timely resolution of security issues and maintain a robust security posture.</li>
+	   					<li>Conducted various Internal Network VAPT activities, enhancing our security posture by identifying and mitigating vulnerabilities across our infrastructure.</li>
+	   					<li>Assisted in ISO 27001 and PCI DSS compliance by implementing required security controls and facilitating audits, ensuring robust adherence to standards.</li>
+	   					<li>Managed assets for PCI compliance, conducting weekly PCI scans for effective Attack Surface Management.</li>
+	   					<li>Designed the Service Processes, defined the KPIs, Escalation Processes, SLAs and Impact/Urgency matrix.</li>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -263,13 +274,15 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Security Analyst Intern</h3>
+	   					<p>August 2023 - June 2023</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
+	   					<h4>Fareportal India Pvt. Ltd.</h4>
+	   					<li>Conducted security assessments for both internal and external facing applications during regular releases and periodic reviews.</li>
+	   					<li>Monitored dark web for compromised credentials and phishing threats, performing takedowns and brand monitoring.</li>
+	   					<li>Managed vendors for third-party penetration testing of critical and customer-facing applications to ensure compliance with relevant security standards.</li>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -299,12 +312,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Bachelor of Technology | Computer Science and Engineering</h3>
+	   					<p>2019-2023</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
+	   					<h4>Dronacharya College of Engineering</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
 	   				</div>
 
@@ -317,30 +330,12 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>CBSE | Xth-82% XIIth-79%</h3>
+	   					<p>2017-2019</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
-
-	   			</div> <!-- /timeline-block -->
-
-	   			<div class="timeline-block">
-
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
-	   				</div>
-
-	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
+	   					<h4>St. Martin's Diocesan School</h4>
 	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
 	   				</div>
 
